fix all the data  mismatch
